[workspace]
members = [
    "voting",
    # "elections",
    "nominations"
]


# compilation profile for a release target
[profile.release]
codegen-units = 1
# "s" = optimize for binary size ("z" would additionally turn off loop vectorization)
# 3  all optimiations
opt-level = "s"
# link time optimization
lto = true
panic = "abort"
overflow-checks = true
debug = false
debug-assertions = false
rpath = false

[workspace.dependencies]
near-sdk = "^4.1.1"
uint = { version = "^0.9.5", default-features = false }
serde_json = "^1.0"
