[package]
name = "congress"
version = "1.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
# rlib is needed for integration tests
crate-type = ["cdylib", "rlib"]

[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true
itertools.workspace = true

common = { path = "../common" }

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
near-workspaces.workspace = true
near-primitives.workspace = true
near-units.workspace = true
integrations = { path = "../integrations" }
