[package]
name = "elections"
version = "1.0.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
# rlib is needed for integration tests
crate-type = ["cdylib", "rlib"]

[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true

[dev-dependencies]
anyhow = "1.0.71"
tokio = { version = "1.28.2", features = ["full"] }
workspaces = "0.7.0"
near-primitives = "0.17.0"
near-units = "0.2.0"
