[package]
name = "elections"
version = "1.0.6"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
# rlib is needed for integration tests
crate-type = ["cdylib", "rlib"]

[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true

common = { path = "../common" }
sbt = { git = "https://github.com/near-ndc/i-am-human.git" }

[dev-dependencies]
anyhow.workspace = true
tokio.workspace = true
near-workspaces.workspace = true
near-primitives.workspace = true
near-units.workspace = true
integrations = { path = "../integrations" }
