[package]
name = "ndc_voting_body"
version = "1.0.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]


[dependencies]
uint.workspace = true
near-sdk.workspace = true
serde_json.workspace = true
